fixed whitespace on sides on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -174,7 +174,7 @@ cite sup > a {
     font-size: 18px;
   }
   main {
-    padding: 1em;
+    padding: 1em 0.5em;
   }
 }
 
